[package]
name = "starlit-cli"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
starlit = { version = "0.1.0", path = "../starlit" }
flussab-cnf = "0.2.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
