[package]
name = "starlit-cli"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
flussab-cnf = "0.2.0"
mimalloc = { version = "0.1.26", default-features = false }
starlit = { version = "0.1.0", path = "../starlit" }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
