[package]
name = "starlit-cli"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2021"
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "starlit"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.14", features = ["derive"] }
flussab-cnf = "0.3.0"
mimalloc = { version = "0.1.28", default-features = false }
starlit = { version = "0.1.0", path = "../starlit" }
