[package]
name = "starlit"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
vec_mut_scan = "0.4.0"
flussab-cnf = "0.2.0"

[dev-dependencies]
anyhow = "1.0.38"
