[package]
name = "starlit"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2021"
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
flussab-cnf = "0.3.0"
tracing = "0.1.34"

starlit-macros = { version = "0.1.0", path = "../starlit-macros" }

[dev-dependencies]
anyhow = "1.0.56"
