[package]
name = "starlit"
version = "0.1.0"
edition = "2021"
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flussab-cnf = "0.3.0"
flussab = "0.3.0"

starlit-macros = { version = "0.1.0", path = "../starlit-macros" }
